# RoadSense-AI

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml
agents/: __init__.py  action.py  graph.py  guardrail.py  policy_reasoning.py  pydantic_policy_agent.py  retrieval.py  router.py  state.py
agents/tools/: __init__.py  dispatch.py  eta.py  weather.py
api/: __init__.py  auth.py  main.py  middleware.py
api/routes/: health.py  triage.py
data/: build_golden_set.py  download.py  transform.py
deploy/: Dockerfile.api  Dockerfile.functions  k8s-secrets.example.yaml
deploy/helm/roadsense/: Chart.yaml  values.yaml
deploy/helm/roadsense/templates/: deployment.yaml  service.yaml
docs/: azure-ingestion-guide.md  convert_md_to_pdf.py  github-actions-habit.md  project-plan.md
eval/: golden_set.jsonl  llm_judge.py  promptfoo.yaml  ragas_runner.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentTimeline.tsx
infra/: deploy.sh  main.bicep
infra/modules/: aks.bicep  cosmos.bicep  functions.bicep  openai.bicep  search.bicep  storage.bicep
ingestion/: __init__.py  function_app.py  host.json  orchestrator.py
ingestion/activities/: chunk_embed.py  index_search.py  parse_pdf.py  pii_mask.py
observability/: langfuse_client.py
security/: __init__.py  attack_corpus.jsonl  injection_detector.py  presidio_pipeline.py
tests/: test_guardrails.py
